[package]
name = "u_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["fs", "macros", "rt-multi-thread"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
thiserror = "1.0"
dirs-next = "2.0"
