[package]
name = "u_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["fs", "macros", "rt-multi-thread", "process"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
thiserror = "1.0"
dirs-next = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls", "cookies"] }
serde_json = "1.0"
url = "2.5"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
indicatif = { version = "0.17", features = ["tokio"] }
sanitize-filename = "0.5"
html2md = "0.2"
deunicode = "1.6"
sha1 = "0.10"
hex = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
which = "5"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"] }
futures = "0.3"
reqwest_cookie_store = "0.9.0"
cookie = "0.18.1"
cookie_store = "0.22.0"

[dev-dependencies]
tempfile = "3.23.0"
